# x-sentiment-analysis

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml  sentiment.csv
.github/: copilot-instructions.md
src/mba_rr/: __init__.py  __main__.py  cli.py  config.py  twitter_sentiment.py
tests/: test_cli.py  test_config.py  test_twitter_sentiment.py
